--- a/src/contato.html
+++ b/src/contato.html
@@ -267,7 +267,9 @@
                     <span><i class="fa-solid fa-phone"></i>(11) 3849-8866</span>
                   </div>
                   <div class="buttons-contato">
-                    <a href="" class="button-contato-zap"
+                    <a
+                      href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+                      class="button-contato-zap"
                       ><i class="fa-brands fa-whatsapp"></i> Enviar Whatsapp</a
                     >
                   </div>
