--- a/src/equipe.html
+++ b/src/equipe.html
@@ -360,7 +360,7 @@
           </div>
 
           <div class="equipe-info">
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Gabrielle-Dentista-Vila-Olimpia.webp"
@@ -369,6 +369,17 @@
               </div>
               <span>Dra. Gabrielle Feitoza Bassi Costa</span>
               <p>Ortodontia - CROSP 45723</p>
+            </div> -->
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Vitoria-Dentista-Vila-Olimpia.webp"
+                  alt="Foto da Dra. Vitoria Zaparoli Calisto Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Vitoria Zaparoli Calisto</span>
+              <p>Clinica Geral - CROSP 141235</p>
             </div>
 
             <div class="equipe-curriculo">
@@ -463,18 +474,9 @@
               <p>Tratamento de Canal (Endodontia) - CROSP 103182</p>
             </div>
           </div>
-          <div class="equipe-info">
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Vitoria-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Vitoria Zaparoli Calisto Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Vitoria Zaparoli Calisto</span>
-              <p>Clinica Geral - CROSP 141235</p>
-            </div>
-          </div>
+          <!-- <div class="equipe-info">
+           
+          </div> -->
         </div>
       </section>
 
