--- a/src/ortodontia.html
+++ b/src/ortodontia.html
@@ -389,7 +389,7 @@
               <p>Ortodontia - CROSP 83958</p>
             </div>
 
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Gabrielle-Dentista-Vila-Olimpia.webp"
@@ -398,7 +398,7 @@
               </div>
               <span>Dra. Gabrielle Feitoza Bassi Costa</span>
               <p>Ortodontia - CROSP 45723</p>
-            </div>
+            </div> -->
 
             <div class="equipe-curriculo">
               <div class="img-curriculo">
