--- a/src/disfuncao-do-atm.html
+++ b/src/disfuncao-do-atm.html
@@ -299,7 +299,7 @@
         <div class="container">
           <h2>Equipe</h2>
           <div class="equipe-info">
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Gabrielle-Dentista-Vila-Olimpia.webp"
@@ -308,7 +308,7 @@
               </div>
               <span>Dra. Gabrielle Feitoza Bassi Costa</span>
               <p>Ortodontia - CROSP 45723</p>
-            </div>
+            </div> -->
 
             <div class="equipe-curriculo">
               <div class="img-curriculo">
