--- a/src/clareamento-dental.html
+++ b/src/clareamento-dental.html
@@ -485,8 +485,24 @@
             </div>
           </div>
         </div>
+        <div class="gtranslate_wrapper"></div>
       </footer>
     </main>
+
+    <script>
+      window.gtranslateSettings = {
+        default_language: 'pt',
+        languages: ['pt', 'en', 'it', 'es', 'fr'],
+        wrapper_selector: '.gtranslate_wrapper',
+        switcher_horizontal_position: 'right',
+        float_switcher_open_direction: 'bottom',
+        alt_flags: { en: 'usa', pt: 'brazil' }
+      }
+    </script>
+    <script
+      src="https://cdn.gtranslate.net/widgets/latest/float.js"
+      defer
+    ></script>
 
     <script src="./resources/js/main.js"></script>
 
