ajuste traducao depoimentos

--- a/src/index.html
+++ b/src/index.html
@@ -636,15 +636,16 @@
 
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery-translate/1.0.0/jquery.translate.min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
 
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery-translate/1.0.0/jquery.translate.min.js"
     ></script>
 
     <!-- Lógica API Google Depoimentos-->
     <script src="./resources/js/apiGoogle.js"></script>
+    <!-- <script src="./resources/js/traducao.js"></script> -->
   </body>
 </html>
