--- a/src/page1.html
+++ b/src/page1.html
@@ -417,6 +417,7 @@
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
               <p>CRO-SP 83958</p>
+              <p>Centro Odontológico Funchal - CNPJ 09.261.984/0001-39</p>
             </div>
             <div class="icon-logo-footer">
               <img
