--- a/src/page43.html
+++ b/src/page43.html
@@ -426,6 +426,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
               <p>CRO-SP 83958</p>
+              <p>Centro Odontológico Funchal - CNPJ 09.261.984/0001-39</p>
             </div>
             <div class="icon-logo-footer">
               <img
