ajustes data mobile e pre depoimentos

--- a/src/indexfelipe.html
+++ b/src/indexfelipe.html
@@ -181,7 +181,7 @@
               <li>
                 <a href="equipe.html">Equipe</a>
               </li>
-              <li><a href="depoimentos.html">Depoimentos</a></li>
+              <li><a href="/#depoimentos">Depoimentos</a></li>
               <li><a href="endereco.html">Endereço</a></li>
 
               <li>
@@ -300,7 +300,7 @@
               </option>
             </select>
             <a href="equipe.html">Equipe</a>
-            <a href="depoimentos.html">Depoimentos</a>
+            <a href="/#depoimentos">Depoimentos</a>
             <a href="#localizacao">Endereço</a>
 
             <a href="contato.html">Contato</a>
@@ -327,7 +327,7 @@
               <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
             </div>
             <div class="endereco-footer">
-              <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
+              <p>A Clínica Oral - Dentista Vila Olímpia - 2024</p>
               <p>CRO-SP 83958</p>
               <p>Centro Odontológico Funchal - CNPJ 09.261.984/0001-39</p>
             </div>
