--- a/src/page43.html
+++ b/src/page43.html
@@ -198,7 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <li>
                 <a href="equipe.html">Equipe</a>
               </li>
-              <li><a href="depoimentos.html">Depoimentos</a></li>
+              <li><a href="/#depoimentos">Depoimentos</a></li>
               <li><a href="endereco.html">Endereço</a></li>
               
               <li>
@@ -424,7 +424,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               ></a>
             </div>
             <div class="endereco-footer">
-              <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
+              <p>A Clínica Oral - Dentista Vila Olímpia - 2024</p>
               <p>CRO-SP 83958</p>
               <p>Centro Odontológico Funchal - CNPJ 09.261.984/0001-39</p>
             </div>
