--- a/src/header.html
+++ b/src/header.html
@@ -182,7 +182,7 @@
                 <a href="equipe.html">Equipe</a>
               </li>
               <li>
-                <a href="depoimentos.html">Depoimentos</a>
+                <a href="/#depoimentos">Depoimentos</a>
               </li>
               <li>
                 <a href="endereco.html">Endereço</a>
@@ -304,7 +304,7 @@
               </option>
             </select>
             <a href="equipe.html">Equipe</a>
-            <a href="depoimentos.html">Depoimentos</a>
+            <a href="/#depoimentos">Depoimentos</a>
             <a href="#localizacao">Endereço</a>
 
             <a href="contato.html">Contato</a>
@@ -558,7 +558,7 @@
               <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
             </div>
             <div class="endereco-footer">
-              <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
+              <p>A Clínica Oral - Dentista Vila Olímpia - 2024</p>
               <p>CRO-SP 83958</p>
               <p>Centro Odontológico Funchal - CNPJ 09.261.984/0001-39</p>
             </div>
