--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@
                 <a href="equipe.html">Equipe</a>
               </li>
               <li>
-                <a href="depoimentos.html">Depoimentos</a>
+                <a href="/#depoimentos">Depoimentos</a>
               </li>
               <li>
                 <a href="endereco.html">Endereço</a>
@@ -271,7 +271,7 @@
               <a href="cirurgia-ortognatica.html">Cirurgia Ortognática</a>
             </div>
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
-            <a href="depoimentos.html">Depoimentos</a>
+            <a href="/#depoimentos">Depoimentos</a>
             <a href="endereco.html">Endereço</a>
 
             <a href="contato.html">Contato</a>
@@ -505,6 +505,8 @@
         </div>
       </section>
 
+      <div id="depoimentos"></div>
+
       <section class="s-depoimento">
         <div class="container">
           <div class="box-depoimento">
@@ -591,7 +593,7 @@
               <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
             </div>
             <div class="endereco-footer">
-              <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
+              <p>A Clínica Oral - Dentista Vila Olímpia - 2024</p>
               <p>CRO-SP 83958</p>
               <p>Centro Odontológico Funchal - CNPJ 09.261.984/0001-39</p>
             </div>
