--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -402,7 +402,7 @@
         </div>
       </section>
 
-      <section class="s-depoimento">
+      <!--<section class="s-depoimento">
         <div class="container">
           <div class="box-depoimento">
             <h1>Depoimentos</h1>
@@ -410,7 +410,7 @@
           </div>
           <div id="localizacao"></div>
         </div>
-      </section>
+      </section>-->
 
       <section class="s-contato" style="margin-top: -5rem">
         <div class="box-contato">
