--- a/src/teste-novo-depoimento.html
+++ b/src/teste-novo-depoimento.html
@@ -482,7 +482,7 @@
         </div>
       </section>
 
-      <section class="s-depoimento">
+      <!--<section class="s-depoimento">
         <div class="container">
           <div class="box-depoimento">
             <h1>Depoimentos</h1>
@@ -490,7 +490,7 @@
           </div>
           <div id="localizacao"></div>
         </div>
-      </section>
+      </section>-->
 
       <section class="s-contato" style="margin-top: -5rem">
         <div class="box-contato">
