--- a/src/tratamento-da-gengiva.html
+++ b/src/tratamento-da-gengiva.html
@@ -339,14 +339,14 @@
         </div>
       </section>
 
-      <section class="s-depoimento">
+      <!--<section class="s-depoimento">
         <div class="container">
           <div class="box-depoimento">
             <h1>Depoimentos</h1>
             <div id="reviews-carousel" class="slick-carousel"></div>
           </div>
         </div>
-      </section>
+      </section>-->
 
       <section class="s-contato" style="margin-top: -5rem">
         <div class="box-contato">
