--- a/src/facetas-de-porcelana.html
+++ b/src/facetas-de-porcelana.html
@@ -162,7 +162,7 @@
                     </ul>
                   </li>
                   <li>
-                    <a href="ortodontia.html">Otodontia</a>
+                    <a href="ortodontia.html">Ortodontia</a>
                   </li>
                   <li>
                     <a href="tratamento-de-canal.html"
