--- a/src/indexfelipe.html
+++ b/src/indexfelipe.html
@@ -150,7 +150,7 @@
                     </ul>
                   </li>
                   <li>
-                    <a href="ortodontia.html">Otodontia</a>
+                    <a href="ortodontia.html">Ortodontia</a>
                   </li>
                   <li>
                     <a href="tratamento-de-canal.html"
