atualizacao de doutores remocao

--- a/src/dentes-do-siso.html
+++ b/src/dentes-do-siso.html
@@ -307,7 +307,7 @@
         <div class="container">
           <h2>Equipe</h2>
           <div class="equipe-info">
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.webp"
@@ -316,7 +316,7 @@
               </div>
               <span>Dra. Paloma Valenzuela</span>
               <p>Implante Dentário e Clínica Geral - CROSP 118123</p>
-            </div>
+            </div> -->
 
             <div class="equipe-curriculo">
               <div class="img-curriculo">
