--- a/src/equipe.html
+++ b/src/equipe.html
@@ -290,18 +290,7 @@
           </div>
 
           <div class="equipe-info">
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/dra-Bruna-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Brunna Helloisa Souza  Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Brunna Helloisa Souza </span>
-              <p>Clinica Greal - CROSP 141324</p>
-            </div>
-
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Carolina-Dentista-Vila-Olimpia.webp"
@@ -310,9 +299,9 @@
               </div>
               <span>Dra. Carolina Popp Leme</span>
               <p>Ortodontia - CROSP 124782</p>
-            </div>
+            </div> -->
 
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.webp"
@@ -321,7 +310,7 @@
               </div>
               <span>Dra. Caroline Bernardo</span>
               <p>Estética e Prótese - CROSP 12131</p>
-            </div>
+            </div> -->
           </div>
 
           <div class="equipe-info">
@@ -455,13 +444,24 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
+                  src="./resources/img/curriculo/dra-Bruna-Dentista-Vila-Olimpia.webp"
+                  alt="Foto da Dra. Brunna Helloisa Souza  Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Brunna Helloisa Souza </span>
+              <p>Clinica Greal - CROSP 141324</p>
+            </div>
+
+            <!-- <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
                   src="./resources/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Paloma Valenzuela Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra. Paloma Valenzuela</span>
               <p>Implante Dentário e Clínica Geral - CROSP 118123</p>
-            </div>
+            </div> -->
           </div>
           <!-- <div class="equipe-info">
            
