--- a/src/lente-de-contato-dental.html
+++ b/src/lente-de-contato-dental.html
@@ -357,7 +357,7 @@
               <p>Clinica Geral - CROSP 141235</p>
             </div>
 
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.webp"
@@ -366,7 +366,7 @@
               </div>
               <span>Dra. Caroline Bernardo</span>
               <p>Estética e Prótese - CROSP 12131</p>
-            </div>
+            </div> -->
           </div>
 
           <div class="equipe-info">
