--- a/src/ortodontia.html
+++ b/src/ortodontia.html
@@ -400,7 +400,7 @@
               <p>Ortodontia - CROSP 45723</p>
             </div> -->
 
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Carolina-Dentista-Vila-Olimpia.webp"
@@ -409,7 +409,7 @@
               </div>
               <span>Dra. Carolina Popp Leme</span>
               <p>Ortodontia - CROSP 124782</p>
-            </div>
+            </div> -->
           </div>
           <div class="equipe-info">
             <div class="equipe-curriculo">
