--- a/src/facetas-de-porcelana.html
+++ b/src/facetas-de-porcelana.html
@@ -354,7 +354,7 @@
               <p>Clinica Geral - CROSP 141235</p>
             </div>
 
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.webp"
@@ -363,7 +363,7 @@
               </div>
               <span>Dra. Caroline Bernardo</span>
               <p>Estética e Prótese - CROSP 12131</p>
-            </div>
+            </div> -->
           </div>
 
           <div class="equipe-info">
