--- a/src/ortodontia.html
+++ b/src/ortodontia.html
@@ -431,7 +431,7 @@
                 />
               </div>
               <span>Dra. Brunna Helloisa Souza </span>
-              <p>Clinica Greal - CROSP 141324</p>
+              <p>Ortodontia - CROSP 141324</p>
             </div>
           </div>
         </div>
