--- a/src/equipe.html
+++ b/src/equipe.html
@@ -449,7 +449,7 @@
                 />
               </div>
               <span>Dra. Brunna Helloisa Souza </span>
-              <p>Clinica Greal - CROSP 141324</p>
+              <p>Ortodontia - CROSP 141324</p>
             </div>
 
             <!-- <div class="equipe-curriculo">
