ajustes design e pedidos v4 company

--- a/src/contato.html
+++ b/src/contato.html
@@ -94,7 +94,7 @@
               class="button-wpp"
               href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+              ><i class="fa fa-whatsapp"></i> Transforme agora o seu sorriso</a
             >
           </div>
 
@@ -201,7 +201,8 @@
                 class="button-wpp"
                 href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-                ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+                ><i class="fa fa-whatsapp"></i> Transforme agora o seu
+                sorriso</a
               >
             </div>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -255,7 +256,7 @@
           <div class="container">
             <div class="info-contato">
               <div class="info-contato-left">
-                <h1>Agendar Consulta</h1>
+                <h1>Transforme agora o seu sorriso</h1>
                 <div class="conteudo-contato-left">
                   <h3>Contatos</h3>
                   <div>
@@ -333,6 +334,16 @@
         </div>
         <div class="gtranslate_wrapper"></div>
       </footer>
+
+      <section class="s-whatsAppButton">
+        <a
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+          target="_blank"
+          class="whatsapp-link"
+        >
+          <i class="fa fa-whatsapp whatsapp-icon"></i>
+        </a>
+      </section>
     </main>
 
     <script>
