--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
               class="button-wpp"
               href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+              ><i class="fa fa-whatsapp"></i> Transforme agora o seu sorriso</a
             >
           </div>
 
@@ -232,7 +232,8 @@
                 class="button-wpp"
                 href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-                ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+                ><i class="fa fa-whatsapp"></i> Transforme agora o seu
+                sorriso</a
               >
             </div>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -293,8 +294,13 @@
                 height="150"
               />
               <div class="text-first">
-                <p>Conforto e sofisticação para você e seu sorriso</p>
-                <h1>Dentista Vila Olímpia</h1>
+                <h1>
+                  Faça seu tratamento ortodôntico com os alinhadores invisíveis!
+                  <br />
+                  Transforme seu sorriso até
+                  <strong>duas vezes mais rápido</strong>, de forma
+                  <strong>discreta</strong> e <strong>confortável</strong>.
+                </h1>
               </div>
             </div>
           </div>
@@ -304,10 +310,10 @@
       <section class="s-itens-menu">
         <div class="container">
           <div class="itens-index">
-            <p class="box-iten-index">Ortodontia</p>
-            <p class="box-iten-index">Clareamento Dental</p>
-            <p class="box-iten-index">Dentes do Siso</p>
+            <p class="box-iten-index">Alinhadores invisíveis</p>
+            <p class="box-iten-index">Clareamento</p>
             <p class="box-iten-index">Lente de Contato Dental</p>
+            <!-- <p class="box-iten-index">Lente de Contato Dental</p> -->
           </div>
           <div class="iten-tratamento">
             <a href="">Todos os Tratamentos</a>
@@ -327,7 +333,7 @@
                 />
               </div>
               <div class="text-tratamento">
-                <span>Ortodontia</span>
+                <span>Alinhadores invisíveis</span>
               </div>
             </div>
             <div class="item-tratamento">
@@ -338,18 +344,7 @@
                 />
               </div>
               <div class="text-tratamento">
-                <span>Clareamento Dental</span>
-              </div>
-            </div>
-            <div class="item-tratamento">
-              <div class="plus">
-                <img
-                  src="resources/icons/plus-icon.svg"
-                  alt="Mais tratamentos"
-                />
-              </div>
-              <div class="text-tratamento">
-                <span>Dentes do Siso</span>
+                <span>Clareamento</span>
               </div>
             </div>
             <div class="item-tratamento">
@@ -363,6 +358,17 @@
                 <span>Lente de Contato Dental</span>
               </div>
             </div>
+            <!-- <div class="item-tratamento">
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
+              <div class="text-tratamento">
+                <span>Lente de Contato Dental</span>
+              </div>
+            </div> -->
           </div>
           <div class="iten-tratamento">
             <a href="">Todos os Tratamentos</a>
@@ -390,7 +396,7 @@
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
                 class="agendarIndex"
                 style="color: #fff"
-                >Agendar consulta</a
+                >Transforme agora o seu sorriso</a
               >
             </div>
           </div>
@@ -609,6 +615,16 @@
         </div>
         <div class="gtranslate_wrapper"></div>
       </footer>
+
+      <section class="s-whatsAppButton">
+        <a
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+          target="_blank"
+          class="whatsapp-link"
+        >
+          <i class="fa fa-whatsapp whatsapp-icon"></i>
+        </a>
+      </section>
     </main>
 
     <script>
