--- a/src/page43.html
+++ b/src/page43.html
@@ -81,7 +81,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               class="button-wpp"
               href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+              ><i class="fa fa-whatsapp"></i> Transforme agora o seu sorriso</a
             >
           </div>
 
@@ -215,7 +215,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 class="button-wpp"
                 href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-                ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+                ><i class="fa fa-whatsapp"></i> Transforme agora o seu sorriso</a
               >
             </div>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -345,7 +345,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Transforme agora o seu sorriso</a
                 >
               </div>
 
@@ -440,6 +440,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
          <div class="gtranslate_wrapper"></div>
 </footer>
+
+      <section class="s-whatsAppButton">
+        <a
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+          target="_blank"
+          class="whatsapp-link"
+        >
+          <i class="fa fa-whatsapp whatsapp-icon"></i>
+        </a>
+      </section>
     </main>
 
 <script>
