--- a/src/page5.html
+++ b/src/page5.html
@@ -105,7 +105,7 @@
               class="button-wpp"
               href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
               onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+              ><i class="fa fa-whatsapp"></i> Transforme agora o seu sorriso</a
             >
           </div>
 
@@ -212,7 +212,8 @@
                 class="button-wpp"
                 href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                 onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-                ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+                ><i class="fa fa-whatsapp"></i> Transforme agora o seu
+                sorriso</a
               >
             </div>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -365,7 +366,8 @@
                   class="button-wpp"
                   href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
                   onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-                  ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+                  ><i class="fa fa-whatsapp"></i> Transforme agora o seu
+                  sorriso</a
                 >
               </div>
 
@@ -457,6 +459,16 @@
         </div>
         <div class="gtranslate_wrapper"></div>
       </footer>
+
+      <section class="s-whatsAppButton">
+        <a
+          href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+          target="_blank"
+          class="whatsapp-link"
+        >
+          <i class="fa fa-whatsapp whatsapp-icon"></i>
+        </a>
+      </section>
     </main>
 
     <script>
