--- a/src/equipe.html
+++ b/src/equipe.html
@@ -409,6 +409,28 @@
               <p>Ortodontia - CROSP 141324</p>
             </div>
 
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Neviane.webp"
+                  alt="Foto da Dra. Neviane Boldori Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Neviane Boldori </span>
+              <p>Estética e Clinica Geral - CROSP 135444</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Sara_new.webp"
+                  alt="Foto da Dra. Sara Hirata Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Sara Hirata</span>
+              <p>Endodontia - CROSP 145629</p>
+            </div>
+
             <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
