remove dra amanda

--- a/src/equipe.html
+++ b/src/equipe.html
@@ -310,13 +310,24 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
+                  src="./resources/img/curriculo/Kelly.webp"
+                  alt="Foto da Dra. Maichiele Schneider Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Maichiele Schneider</span>
+              <p>Ortodontia e Clinica Geral - CROSP 134413</p>
+            </div>
+
+            <!-- <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
                   src="./resources/img/curriculo/Dra-Amanda-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Amanda Zarpellon Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra. Amanda Zarpellon</span>
               <p>Buco-Maxilo - CROSP 107223</p>
-            </div>
+            </div> -->
           </div>
 
           <div class="equipe-info">
@@ -470,18 +481,7 @@
             </div> -->
           </div>
 
-          <div class="equipe-info">
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Kelly.webp"
-                  alt="Foto da Dra. Maichiele Schneider Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Maichiele Schneider</span>
-              <p>Ortodontia e Clinica Geral - CROSP 134413</p>
-            </div>
-          </div>
+          <div class="equipe-info"></div>
           <!-- <div class="equipe-info">
            
           </div> -->
