--- a/src/sp/cirurgia-ortognatica.html
+++ b/src/sp/cirurgia-ortognatica.html
@@ -424,7 +424,7 @@
               </p>
             </div>
 
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Amanda-Dentista-Vila-Olimpia.webp"
@@ -433,13 +433,13 @@
               </div>
               <span>Dra. Amanda Zarpellon</span>
               <p>Buco-Maxilo - CROSP 107223</p>
-            </div>
+            </div> -->
 
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Jaqueline-Ramos.webp"
-                  alt="Foto da Dra. Amanda Zarpellon Dentista Vila Olímpia"
+                  alt="Foto da Dra. Jaqueline Ramos Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra Jaqueline Ramos</span>
