--- a/src/sp/dentes-do-siso.html
+++ b/src/sp/dentes-do-siso.html
@@ -354,7 +354,7 @@
               <p>Implante Dentário e Clínica Geral - CROSP 118123</p>
             </div> -->
 
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dra-Amanda-Dentista-Vila-Olimpia.webp"
@@ -363,13 +363,13 @@
               </div>
               <span>Dra. Amanda Zarpellon</span>
               <p>Buco-Maxilo - CROSP 107223</p>
-            </div>
+            </div> -->
 
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Jaqueline-Ramos.webp"
-                  alt="Foto da Dra. Amanda Zarpellon Dentista Vila Olímpia"
+                  alt="Foto da Dra. Jaqueline Ramos Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra Jaqueline Ramos</span>
