ajustes links ancoras

--- a/src/blog.html
+++ b/src/blog.html
@@ -227,10 +227,10 @@
                 <a href="/#depoimentos">Depoimentos</a>
               </li>
               <li>
-                <a href="/#endereco">Endereço</a>
+                <a href="#endereco">Endereço</a>
               </li>
               <li>
-                <a href="contato.html">Contato</a>
+                <a href="#contato">Contato</a>
               </li>
             </ul>
           </div>
@@ -281,9 +281,9 @@
             </div>
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="/#depoimentos">Depoimentos</a>
-            <a href="/#endereco">Endereço</a>
+            <a href="#endereco">Endereço</a>
 
-            <a href="contato.html">Contato</a>
+            <a href="#contato">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
