--- a/src/header.html
+++ b/src/header.html
@@ -215,11 +215,11 @@
                 <a href="/#depoimentos">Depoimentos</a>
               </li>
               <li>
-                <a href="/#endereco">Endereço</a>
+                <a href="#endereco">Endereço</a>
               </li>
 
               <li>
-                <a href="contato.html">Contato</a>
+                <a href="#contato">Contato</a>
               </li>
             </ul>
           </div>
@@ -337,7 +337,7 @@
             <a href="/#depoimentos">Depoimentos</a>
             <a href="#localizacao">Endereço</a>
 
-            <a href="contato.html">Contato</a>
+            <a href="#contato">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
