--- a/src/page43.html
+++ b/src/page43.html
@@ -205,7 +205,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="equipe.html">Equipe</a>
               </li>
               <li><a href="/#depoimentos">Depoimentos</a></li>
-              <li><a href="/#endereco">Endereço</a></li>
+              <li><a href="#endereco">Endereço</a></li>
               
               <li>
                 <a href="contato.html"
@@ -305,7 +305,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               >Endereço</a
             >
             
-            <a href="contato.html">Contato</a>
+            <a href="#contato">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
