--- a/src/endereco.html
+++ b/src/endereco.html
@@ -220,7 +220,7 @@
               </li>
 
               <li>
-                <a href="contato.html">Contato</a>
+                <a href="#contato">Contato</a>
               </li>
             </ul>
           </div>
@@ -271,9 +271,9 @@
             </div>
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="/#depoimentos">Depoimentos</a>
-            <a href="/#endereco">Endereço</a>
+            <a href="#endereco">Endereço</a>
 
-            <a href="contato.html">Contato</a>
+            <a href="#contato">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
