--- a/src/equipe.html
+++ b/src/equipe.html
@@ -216,10 +216,10 @@
                 <a href="/#depoimentos">Depoimentos</a>
               </li>
               <li>
-                <a href="/#endereco">Endereço</a>
+                <a href="#endereco">Endereço</a>
               </li>
               <li>
-                <a href="contato.html">Contato</a>
+                <a href="#contato">Contato</a>
               </li>
             </ul>
           </div>
@@ -271,7 +271,7 @@
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="/#depoimentos">Depoimentos</a>
             <a href="/#endereco">Endereço</a>
-            <a href="contato.html">Contato</a>
+            <a href="#contato">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
