--- a/src/index.html
+++ b/src/index.html
@@ -302,9 +302,9 @@
             </div>
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="/#depoimentos">Depoimentos</a>
-            <a href="/#endereco">Endereço</a>
+            <a href="#endereco">Endereço</a>
 
-            <a href="contato.html">Contato</a>
+            <a href="#contato">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
