--- a/src/indexfelipe.html
+++ b/src/indexfelipe.html
@@ -212,10 +212,10 @@
                 <a href="equipe.html">Equipe</a>
               </li>
               <li><a href="/#depoimentos">Depoimentos</a></li>
-              <li><a href="/#endereco">Endereço</a></li>
+              <li><a href="#endereco">Endereço</a></li>
 
               <li>
-                <a href="contato.html">Contato</a>
+                <a href="#contato">Contato</a>
               </li>
             </ul>
           </div>
@@ -333,7 +333,7 @@
             <a href="/#depoimentos">Depoimentos</a>
             <a href="#localizacao">Endereço</a>
 
-            <a href="contato.html">Contato</a>
+            <a href="#contato">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
