ajustes de fotos novas e equipe

--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -350,7 +350,7 @@
           <div class="tratamentoBase-right">
             <div class="img-right-tratamentoBase">
               <img
-                src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.webp"
+                src="./resources/img/equipamentos2_novo.webp"
                 alt=""
                 width="1000"
                 height="667"
@@ -389,7 +389,7 @@
           <div class="tratamentoBase-right">
             <div class="img-right-tratamentoBase">
               <img
-                src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.webp"
+                src="./resources/img/espaco_aconchegante4.webp"
                 alt=""
                 width="1000"
                 height="667"
