--- a/src/sp/equipe.html
+++ b/src/sp/equipe.html
@@ -313,7 +313,7 @@
               </p>
             </div>
 
-            <div class="equipe-curriculo">
+            <!-- <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Kelly.webp"
@@ -322,6 +322,18 @@
               </div>
               <span>Dra. Maichiele Schneider</span>
               <p>Ortodontia e Clinica Geral - CROSP 134413</p>
+            </div> -->
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Sara_new.webp"
+                  class="sara-hirata"
+                  alt="Foto da Dra. Sara Hirata Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Sara Hirata</span>
+              <p>Endodontia - CROSP 145629</p>
             </div>
 
             <!-- <div class="equipe-curriculo">
@@ -376,6 +388,7 @@
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Jaqueline-Ramos.webp"
+                  class="jaqueline-ramos"
                   alt="Foto da Dra. Dra. Jaqueline Ramos Dentista Vila Olímpia"
                 />
               </div>
@@ -387,6 +400,7 @@
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Leticia-Calil.webp"
+                  class="leticia-calil"
                   alt="Foto da Dra. Dra. Leticia Venâncio Calil Dentista Vila Olímpia"
                 />
               </div>
@@ -459,22 +473,12 @@
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Neviane.webp"
+                  class="neviane-boldori"
                   alt="Foto da Dra. Neviane Boldori Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra. Neviane Boldori </span>
               <p>Estética e Clinica Geral - CROSP 135444</p>
-            </div>
-
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Sara_new.webp"
-                  alt="Foto da Dra. Sara Hirata Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Sara Hirata</span>
-              <p>Endodontia - CROSP 145629</p>
             </div>
 
             <!-- <div class="equipe-curriculo">
